Docs updated for Java 9, minor warnings fixed